Fixes font size for error message on mobile

--- a/website/static/css/main.css
+++ b/website/static/css/main.css
@@ -887,4 +887,7 @@ display: none;
     .instructions {
         font-size: 20px;
     }
+    .message {
+        font-size: 0.4em;
+    }
 }
